posiGen_FullsendBox/src/objects/Energy_Saving_Tip__c.object
<CustomObject>
    <description>This populates the How to Save More Money page on the Customer Community.</description>
    <fields>
        <fullName>Category__c</fullName>
        <description>Category for the energy saving tip</description>
        <inlineHelpText>Category for the energy saving tip</inlineHelpText>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Save on water heating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lower your electricity use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reduce heating and cooling costs</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Estimated_Annual_kWh_Savings__c</fullName>
        <description>Estimated annual energy savings in kWh for using this tip</description>
        <inlineHelpText>Estimated annual energy savings in kWh for using this tip</inlineHelpText>
        <label>Estimated Annual kWh Savings</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tip__c</fullName>
        <description>Energy saving tip</description>
        <inlineHelpText>Energy saving tip</inlineHelpText>
        <label>Tip</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Energy Saving Tip</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Tip__c</columns>
        <columns>Estimated_Annual_kWh_Savings__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Tip-{0000}</displayFormat>
        <label>How To Save More Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Energy Saving Tips</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>